M1: accept ADR-0021 after store foundation validation